# python-stuff

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BASE_BRANCH.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  setup.py
scripts/: install_pre-commit.sh
src/: main.py
tests/: tests.py
