[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stuff"
version = "0.1.0"
description = "A bunch of python stuff"
readme = "README.md"
requires-python = "~=3.9.2"
dependencies = [
    "cowsay~=6.1",
]

[project.optional-dependencies]
test = [
    "pytest~=8.4.2",
]
dev = [
    "pre-commit~=4.3.0"
]

[project.scripts]
main = "main:main"
